# GeometryAlgorithms

./: .gitignore  CMakeLists.txt  main.cpp
inc/alg/: ConvexHull.hpp
inc/math/: GeomUtils.hpp  Line.hpp  Math.hpp  Plane.hpp  Point.hpp  Vector.hpp
inc/viz/: Window.h
res/: points.h5
tests/: CMakeLists.txt  Test_GeomUtils.cpp  Test_Line.cpp  Test_Math.cpp  Test_Plane.cpp  Test_Vector.cpp
